@startuml

class CuentaBancaria {
    - titular : String
    - saldo : float

    + C/G/S()
    + retirar(float cantidad) : ?
    + ingresar(float cantidad) : ?
}

class Tarjeta {
    - cuenta : CuentaBancaria
    - pin : int

    + C/G/S()
    + retirar(float cantidad) : ?
    + ingresar(float cantidad) : ?
    + comprobarPin(int) : boolean
}

class Cajero {
    - tarjeta : Tarjeta

    + C/G/S()
    + introducirTarjeta (tarjeta) : ?
    + comprobarPin() : boolean
    + elegirOpciones() : int
    + solicitarCantidad() : float
    + retirar() : ?
    + ingresar() : ?
    + arrancarCajero() : void
}

Tarjeta -- Cajero
CuentaBancaria -- Tarjeta

note left of CuentaBancaria : Modelo
note left of Tarjeta : Controlador
note left of Cajero : Vista

@enduml